--- a/WeatherApp/App.xaml
+++ b/WeatherApp/App.xaml
@@ -2,13 +2,21 @@
 <Application xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:WeatherApp"
-             x:Class="WeatherApp.App">
+             x:Class="WeatherApp.App"
+             xmlns:material="http://schemas.enisn-projects.io/dotnet/maui/uraniumui/material">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Resources/Styles/Colors.xaml" />
+                <!-- 👇 Define right after your local Colors.xaml. -->
+                <material:ColorResource />
+
                 <ResourceDictionary Source="Resources/Styles/Styles.xaml" />
+                <!-- 👇 Define right after your local Styles.xaml -->
+                <material:StyleResource />
+
             </ResourceDictionary.MergedDictionaries>
+            
         </ResourceDictionary>
     </Application.Resources>
 </Application>
