--- a/WeatherApp/Views/AuthorizePage.xaml
+++ b/WeatherApp/Views/AuthorizePage.xaml
@@ -2,11 +2,71 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="WeatherApp.Views.AuthorizePage"
-             Title="AuthorizePage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+             xmlns:uranium="http://schemas.enisn-projects.io/dotnet/maui/uraniumui/material"
+             xmlns:inputkit="clr-namespace:InputKit.Shared.Controls;assembly=InputKit.Maui"
+             Title=""
+             BackgroundColor="#111111"
+             xmlns:fa="clr-namespace:UraniumUI.Icons.FontAwesome;assembly=UraniumUI.Icons.FontAwesome"
+             xmlns:validation="clr-namespace:InputKit.Shared.Validations;assembly=InputKit.Maui"
+
+             >
+
+    
+        <Grid HorizontalOptions="Center" MaximumWidthRequest="350"  VerticalOptions="Center">
+        <StackLayout>
+            
+            <Image WidthRequest="100" HeightRequest="100" Margin="0,0,0,10" >
+                <Image.Source>
+                    <FontImageSource FontFamily="FASolid" Color="White" Glyph="{x:Static fa:Solid.CloudSun}"></FontImageSource>
+                </Image.Source>
+            </Image>
+       
+        <Frame BackgroundColor="#373737" BorderColor="Transparent" WidthRequest="350" CornerRadius="20" Padding="10">
+            <VerticalStackLayout>
+
+                    <inputkit:AdvancedEntry Text="{Binding Login}" CornerRadius="5" IconImage="{x:FontImage FontFamily=FASolid, Color=White, Glyph={x:Static fa:Solid.User}}" BorderColor="Transparent" Margin="0,10,0,10"  TitleColor="#284cd1" TextColor="Black"  Title="Login" >
+                    <inputkit:AdvancedEntry.Validations>
+                        <validation:MinLengthValidation Message="мин. символов 5"  MinLength="5"></validation:MinLengthValidation>
+                    </inputkit:AdvancedEntry.Validations>
+                </inputkit:AdvancedEntry>
+                    <inputkit:AdvancedEntry Text="{Binding Password}"  CornerRadius="5" IsPassword="True" IconImage="{x:FontImage FontFamily=FASolid, Color=White, Glyph={x:Static fa:Solid.Key}}" BorderColor="Transparent"  Margin="0,0,0,10"  TitleColor="#284cd1" TextColor="Black"  Title="Password">
+                    <inputkit:AdvancedEntry.Validations>
+                            <validation:MinLengthValidation Message="мин. символов 8" MinLength="8"></validation:MinLengthValidation>
+                    </inputkit:AdvancedEntry.Validations>
+                </inputkit:AdvancedEntry>
+                <Button CornerRadius="10" TextColor="Black" StyleClass="FilledButton" BackgroundColor="White"   Text="Войти" Margin="0,0,0,10">
+                        <VisualStateManager.VisualStateGroups>
+                            <VisualStateGroup x:Name="CommonStates">
+                                <VisualState x:Name="Normal" />
+                                <VisualState x:Name="Pressed">
+                                    <VisualState.Setters>
+                                        <Setter Property="Opacity"
+                                Value="0.8" />
+
+                                    </VisualState.Setters>
+                                </VisualState>
+                            </VisualStateGroup>
+                        </VisualStateManager.VisualStateGroups>
+                    </Button>
+                <Button CornerRadius="10" StyleClass="FilledButton" BackgroundColor="#284cd1" Text="Регистрация" TextColor="White" >
+                        <VisualStateManager.VisualStateGroups>
+                            <VisualStateGroup x:Name="CommonStates">
+                                <VisualState x:Name="Normal" />
+                                <VisualState x:Name="Pressed">
+                                    <VisualState.Setters>
+                                        <Setter Property="Opacity"
+                                Value="0.8" />
+
+                                    </VisualState.Setters>
+                                </VisualState>
+                            </VisualStateGroup>
+                        </VisualStateManager.VisualStateGroups>
+                    </Button>
+            </VerticalStackLayout>
+            </Frame>
+        </StackLayout>
+
+    </Grid>
+
+
 </ContentPage>
