--- a/WeatherApp/Views/HomePage.xaml
+++ b/WeatherApp/Views/HomePage.xaml
@@ -2,11 +2,102 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="WeatherApp.Views.HomePage"
-             Title="HomePage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+             Title=""
+             xmlns:uranium="http://schemas.enisn-projects.io/dotnet/maui/uraniumui/material"
+             xmlns:inputkit="clr-namespace:InputKit.Shared.Controls;assembly=InputKit.Maui"
+             BackgroundColor="#111111"
+             xmlns:fa="clr-namespace:UraniumUI.Icons.FontAwesome;assembly=UraniumUI.Icons.FontAwesome"
+             xmlns:validation="clr-namespace:InputKit.Shared.Validations;assembly=InputKit.Maui">
+    <VerticalStackLayout Padding="10">
+        <Frame CornerRadius="5" HeightRequest="150" Margin="10" BackgroundColor="#373737">
+            <StackLayout>
+             <uranium:AutoCompleteTextField ItemsSource="{Binding TownsListNames}" Icon="{FontImage Color=Black, FontFamily=FASolid, Glyph={x:Static fa:Solid.MagnifyingGlass}}" Margin="0,10,0,10" CornerRadius="5" BorderColor="White"  TextColor="White" AccentColor="White" Title="Название города">
+                 
+                 
+            </uranium:AutoCompleteTextField>
+                <Button Visual="Default" TextColor="Black" BackgroundColor="LightYellow" CornerRadius="5"  Text="Поиск" Padding="5" >
+                    <VisualStateManager.VisualStateGroups>
+                        <VisualStateGroup x:Name="CommonStates">
+                            <VisualState x:Name="Normal" />
+                            <VisualState x:Name="Pressed">
+                                <VisualState.Setters>
+                                    <Setter Property="Opacity"
+                                Value="0.8" />
+                                    
+                                </VisualState.Setters>
+                            </VisualState>
+                        </VisualStateGroup>
+                    </VisualStateManager.VisualStateGroups>
+                </Button>
+            </StackLayout>
+        </Frame>
+       
+        <Frame CornerRadius="5" HeightRequest="250" Margin="10" BackgroundColor="#373737">
+            <StackLayout>
+                <StackLayout Orientation="Horizontal">
+                    <Image WidthRequest="50">
+                        <Image.Source>
+                            <FontImageSource FontFamily="FASolid" Color="White" Glyph="{x:Static fa:Solid.Heart}"></FontImageSource>
+                        </Image.Source>
+                    </Image>
+                    <Label TextColor="White" FontSize="20" FontAttributes="Bold" Text="Избранные"></Label>
+                </StackLayout>
+                <ScrollView>
+                    <ListView  ItemSelected="ListView_ItemSelected" ItemsSource="{Binding FavoritesTownList}">
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <Frame BackgroundColor="White"  Padding="5">
+                                   
+                                    <FlexLayout JustifyContent="SpaceBetween">
+                                        <Label Text="{Binding name}"></Label>
+                                        <Label Text="{Binding country}"></Label>
+                                    </FlexLayout>
+                                </Frame>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+                </ScrollView>
+            </StackLayout>
+        </Frame>
+        <Frame  CornerRadius="5" HeightRequest="250" Margin="10"  BackgroundColor="#373737">
+            <StackLayout>
+                <StackLayout Orientation="Horizontal">
+                    <Image WidthRequest="50">
+                        <Image.Source>
+                            <FontImageSource FontFamily="FASolid" Color="White" Glyph="{x:Static fa:Solid.City}"></FontImageSource>
+                        </Image.Source>
+                    </Image>
+                    <Label TextColor="White" FontSize="20" FontAttributes="Bold" Text="Лист городов" ></Label>
+                </StackLayout>
+                <ScrollView>
+                    <ListView ItemsSource="{Binding TownsList}">
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <Frame BackgroundColor="White" Margin="5" Padding="5">
+                                    <FlexLayout JustifyContent="SpaceBetween">
+                                        <Label Text="{Binding name}"></Label>
+                                        <Label Text="{Binding country}"></Label>
+                                    </FlexLayout>
+                                </Frame>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+                </ScrollView>
+            </StackLayout>
+        </Frame>
+        <Button Command="{Binding FindRandomTown}" TextColor="Black" BackgroundColor="White" CornerRadius="5" Text="Случайный город">
+            <VisualStateManager.VisualStateGroups>
+                <VisualStateGroup x:Name="CommonStates">
+                    <VisualState x:Name="Normal" />
+                    <VisualState x:Name="Pressed">
+                        <VisualState.Setters>
+                            <Setter Property="Opacity"
+                                Value="0.8" />
+
+                        </VisualState.Setters>
+                    </VisualState>
+                </VisualStateGroup>
+            </VisualStateManager.VisualStateGroups>
+        </Button>
     </VerticalStackLayout>
 </ContentPage>
