--- a/WeatherApp/AppShell.xaml
+++ b/WeatherApp/AppShell.xaml
@@ -4,7 +4,10 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:WeatherApp.Views"
-    Shell.FlyoutBehavior="Disabled">
+    Shell.FlyoutBehavior="Disabled"
+    Shell.TitleColor="White"
+    >
+
 
     <ShellContent
         Title="authorize"
