--- a/WeatherApp/AppShell.xaml
+++ b/WeatherApp/AppShell.xaml
@@ -8,7 +8,10 @@
     Shell.TitleColor="White"
     >
 
-
+    <ShellContent
+        Title="authorize"
+        ContentTemplate="{DataTemplate local:TownInfoPage}"
+        Route="AuthorizePage" />
     <ShellContent
         Title="authorize"
         ContentTemplate="{DataTemplate local:AuthorizePage}"
