--- a/WeatherApp/Views/TownInfoPage.xaml
+++ b/WeatherApp/Views/TownInfoPage.xaml
@@ -2,28 +2,82 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="WeatherApp.Views.TownInfoPage"
-             Title="NameTown"
+             Title="Погода"
              Background="#111"
-             xmlns:lvc="clr-namespace:LiveChartsCore.SkiaSharpView.Maui;assembly=LiveChartsCore.SkiaSharpView.Maui"
+              xmlns:chart="clr-namespace:Syncfusion.Maui.Charts;assembly=Syncfusion.Maui.Charts"
              xmlns:vm="clr-namespace:WeatherApp.ViewsModels"
              >
-    <ContentPage.BindingContext>
-        <vm:TownInfoVm></vm:TownInfoVm>
-    </ContentPage.BindingContext>
-    <ScrollView>
+
+        <ScrollView>
 
         <VerticalStackLayout Padding="10">
-        <Label TextColor="White" Text="По дням:" FontSize="23" FontAttributes="Bold"></Label>
-        <ListView HeightRequest="100"></ListView>
-        <Grid  Margin="0,0,0,20" HeightRequest="300">
-                <lvc:CartesianChart LegendTextSize="18" YAxes="{Binding XYxes}"  Background="white" Series="{Binding Series}" ZoomMode="X"  XAxes="{Binding XAxes}">
-                   
-                </lvc:CartesianChart>
-        </Grid>
+        <Label HorizontalOptions="Center" TextColor="White" FontSize="30"  VerticalOptions="Start" Text="{Binding TownInfo.name}"></Label>
+            <Label HorizontalOptions="Center" TextColor="White" FontSize="30"  VerticalOptions="Start" Text="{Binding DailyData.temperature_2m_max}"></Label>
+            <Label HorizontalOptions="Center" TextColor="White" FontSize="25"  VerticalOptions="Start" Text="{Binding DailyData.dateDay, StringFormat='{0}{dd.MM.yy}'}"></Label>
+            <Label HorizontalOptions="Center" TextColor="White" FontSize="25"  VerticalOptions="Start" Text="{Binding WeatherInfo.dateDay, StringFormat='{0}{H:mm}'}"></Label>
+
+
+            <Label TextColor="White" Text="По дням:" FontSize="23" FontAttributes="Bold"></Label>
+
+            <CollectionView ItemsLayout="HorizontalList" HeightRequest="150" ItemsSource="{Binding ListDailyData}" SelectedItem="{Binding DailyData}" SelectionMode="Single" x:Name="coll1">
+                <CollectionView.ItemTemplate>
+                    <DataTemplate>
+                            <Grid Padding="10,40,0,0" Margin="0,0,0,10" WidthRequest="150" HeightRequest="150" >
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="25"></RowDefinition>
+                                    <RowDefinition Height="25"></RowDefinition>
+                                    <RowDefinition Height="25"></RowDefinition>
+                                </Grid.RowDefinitions>
+                                <Label Grid.Row="0" FontSize="20" TextColor="White" HorizontalOptions="StartAndExpand" VerticalOptions="Center" Text="{Binding dateDay, StringFormat='{0}{dd.MM.yy}'}"></Label>
+                                <Label Grid.Row="1" FontSize="18" TextColor="White" HorizontalOptions="StartAndExpand" VerticalOptions="Center" Text="{Binding dateDay, StringFormat='{0}{dddd}'}"></Label>
+                                <Label Grid.Row="2" FontSize="18" TextColor="White" HorizontalOptions="StartAndExpand" VerticalOptions="Center" Text="{Binding temperatyre_2m_min}"></Label>
+                                <VisualStateManager.VisualStateGroups>
+                                    <VisualStateGroup Name="CommonStates">
+                                        <VisualState Name="Normal" />
+                                        <VisualState Name="Selected">
+                                            <VisualState.Setters>
+                                                <Setter Property="BackgroundColor" Value="#80373737" />
+                                            </VisualState.Setters>
+                                        </VisualState>
+
+                                    </VisualStateGroup>
+                                </VisualStateManager.VisualStateGroups>
+                            </Grid>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
+            <Line HeightRequest="2" Margin="0,0,0,10" Background="#373737"/>
+
+
+        <Frame CornerRadius="5"  BorderColor="#ab2446" Padding="5"  Margin="0,0,0,20" HeightRequest="300">
+                <chart:SfCartesianChart >
+                    <chart:SfCartesianChart.XAxes>
+                        <chart:CategoryAxis>
+                            <chart:CategoryAxis.Title>
+                                <chart:ChartAxisTitle TextColor="Black" Text="Даты" />
+                            </chart:CategoryAxis.Title>
+                        </chart:CategoryAxis>
+                    </chart:SfCartesianChart.XAxes>
+                    <chart:SfCartesianChart.YAxes>
+                        <chart:NumericalAxis>
+                            <chart:NumericalAxis.Title>
+                                <chart:ChartAxisTitle TextColor="Black" Text="Температура(С)" />
+                            </chart:NumericalAxis.Title>
+                        </chart:NumericalAxis>
+                    </chart:SfCartesianChart.YAxes>
+                    <chart:LineSeries Fill="#70141be0" ItemsSource="{Binding DailyData.temperatyre}" 
+                        XBindingPath="{Binding time, StringFormat='{0}{H:mm}'}" 
+                        YBindingPath="temperatyre_2m" />
+                </chart:SfCartesianChart>
+        </Frame>
+            <Line HeightRequest="2" Margin="0,0,0,10" Background="#373737"/>
+            
         <Grid BackgroundColor="Grey" HeightRequest="150" Margin="0,0,0,20">
-            <Label TextColor="White">diagram</Label>
+                <Label TextColor="White">diagram</Label>
         </Grid>
-        <Grid BackgroundColor="Gray" Padding="15">
+         <Line HeightRequest="2" Margin="0,0,0,10" Background="#373737"/>
+
+         <Grid BackgroundColor="Gray" Padding="15">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="1*"></ColumnDefinition>
                 <ColumnDefinition Width="auto"></ColumnDefinition>
